Prevent page refresh on mobile; code style fix

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -3,6 +3,7 @@ html, body {
     padding: 0;
     box-sizing: border-box;
     background-color: #11114E;
+    overscroll-behavior: contain;
 }
 
 h1 {
